2005-06-22  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/command.rb (cmd_edit), template/edit.html: support
	'{{toc}}' in the preview mode.

	* plugin/00default.rb (toc), hiki/command.rb (generate_page),
	template/view.html: display table of contents where '{{toc}}'
	appears.

2005-06-22  Kouhei Yanagita <sugi@dream.big.or.jp>
	* theme/hiki_base.css: add CSS for printing.

2005-06-21  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/history.rb: fix bugs with default repos (reported by
	Yazawa).

	* hiki/plugin.rb (admin?): return true if the admin password is
	empty.
	* hiki/command.rb (initialize): not set @user if the admin
	password is empty (suggested by Kouhei Sutou).

	* style/default/parser.rb: support comments.

	* util/plugin.rb, style/default/html_formatter.rb: support
	inline/block contexts (by Kenta MURATA).

	* style/default/parser.rb, style/default/html_formatter.rb:
	support table headers and cell connections (by fumifumi and
	NAGASAKI).

2005-06-20  Kazuhiko  <kazuhiko@fdiary.net>
	* plugin/00default.rb (anchor): add cgi_name for valid html
	outputs.

	* hiki/repos/default.rb (get_revision, revisions): add new
	methods.
	* misc/plugin/history.rb: support default repos. not display
	'[Diff to ]' if the page has only one revision.

2005-06-17  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/page.rb (out): accept headers hash as an argument.
	* hiki/command.rb (generate_error_page): add a new method to
	display an error page.
	* template/error.html: add a new template file.

	* misc/plugin/attach/attach.rb (attach_download): display an error
	message if the file does not exist. use
	'export_plugin_methods' (by Yazawa).
	* misc/plugin/attach/attach.cgi: use Hiki::Utils::redirect (by
	Yazawa).

2005-06-16  Kouhei Yanagita <sugi@dream.big.or.jp>
	* hiki/command.rb (cmd_login), messages/en.rb, messages/fr.rb,
	messages/it.rb, messages/ja.rb,
	template/login.html (msg_login_failure): show a message when login
	failure.

2005-06-16  Kazuhiko  <kazuhiko@fdiary.net>