@@ -1,6 +1,6 @@
 /*
 Title: Hiki
-$Revision: 1.7 $
+$Revision: 1.8 $
 Author: TAKEUCHI Hitoshi
 Access: hitoshi@namaraii.com
 License: GPL
@@ -40,18 +40,20 @@ body {
 	background-color: #fff;
 	color: #000;
 	font-family: Arial,Verdana,Helvetica,'MS UI Gothic',sans-serif;
+	margin: 0;
+	padding: 0.5em;
+}
+
+a{
+  text-decoration: none;
 }
 
 a:link {
-        color: darkblue;
-        text-decoration: underline;
-        font-weight: bolder;
+  color: #22a;
 }
 
 a:visited {
-        color: darkblue;
-        text-decoration: none;
-        font-weight: bolder;
+  color: #561464;
 }
 
 a:hover {
@@ -61,19 +63,19 @@ a:hover {
 div.adminmenu {
 	text-align: right;
 	margin-top: 0px;
-}
-
-div.adminmenu {
-	padding-right: 0.5em;
+	padding: 0.5em;
 	font-size: x-small;
+        line-height: 2.5em;
 }
 
 span.adminmenu {
 	background-color: #f0f0ff;
 	color: #ffffff;
+	border-color: #aaa;
 	border-style: solid;
 	border-width: 0px 1px 1px 0px;
-	padding: 1px;
+	padding: 2px;
+        white-space: nowrap;
 }
 
 h1 {
@@ -608,7 +610,7 @@ form.update textarea {
         display: block;
         margin-left: 3em;
         margin-bottom: 1em;
-        width: 35em;
+        width: 80%;
         height: 15em;
 }
 
